<resources>
    <string name="app_name">Gobletano</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">play</string>
    <string name="settings">settings</string>
    <string name="statistics">statistics</string>
    <string name="how_to_play">how to play</string>
    <string name="guide">Try to find the card with the golden cup on the back as fast as possible within a given minute!</string>
    <string name="username">username</string>
    <string name="_0_00">0:00</string>
    <string name="_0">0</string>
    <string name="your_name_here">YOUR NAME HERE</string>
    <string name="ok">ok</string>
    <string name="sound">sound</string>
    <string name="change_name">change name</string>
    <string name="win_lose">win/lose</string>
    <string name="next_lv_play_again">next lv / play again</string>
    <string name="main_menu">main menu</string>
</resources>