<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/cup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btnback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btnback1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playBtn" />

        <ImageButton
            android:id="@+id/statsBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btnback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsBtn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/playBtn"
            app:layout_constraintEnd_toEndOf="@+id/playBtn"
            app:layout_constraintStart_toStartOf="@+id/playBtn"
            app:layout_constraintTop_toTopOf="@+id/playBtn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/settingsBtn"
            app:layout_constraintEnd_toEndOf="@+id/settingsBtn"
            app:layout_constraintStart_toStartOf="@+id/settingsBtn"
            app:layout_constraintTop_toBottomOf="@+id/playBtn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/statsBtn"
            app:layout_constraintEnd_toEndOf="@+id/statsBtn"
            app:layout_constraintStart_toStartOf="@+id/statsBtn"
            app:layout_constraintTop_toTopOf="@+id/statsBtn" />

        <ImageButton
            android:id="@+id/guideBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/btnback1"
            app:layout_constraintTop_toBottomOf="@+id/statsBtn"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/guideBtn"
            app:layout_constraintEnd_toEndOf="@+id/guideBtn"
            app:layout_constraintStart_toStartOf="@+id/guideBtn"
            app:layout_constraintTop_toTopOf="@+id/guideBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>